# galleries

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Manual.rst  docutils.conf
galleries/: __init__.py  cli.py  console.py  galleryms.py  refresh.py  relatedtag.py  table_query.py  tagcount.py  util.py
galleries/cli/: __init__.py  __main__.py  lib.py  ops.py
tests/: conftest.py  doctest.rst  ruff.toml  test_cli.py  test_console.py  test_doctest.py  test_galleryms.py  test_graph.py  test_integration.py  test_refresh.py  test_relatedtag.py  test_table_query.py  test_tagactions.py  test_tagcount.py  test_util.py
tests/test_galleryms/: __init__.py  doctest_galleryms.rst  test_fs.py  test_galleryms.py
tests/test_refresh/: test_io.py  test_refresh.py
