[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.1.3"
addopts = "--import-mode=importlib --doctest-modules --doctest-glob='tests/*.rst'"

[tool.mypy]
python_version = "3.10"
implicit_optional = false
# Methods of Collection[Any] may return Any
warn_return_any = false

[tool.pylint.basic]
docstring-min-length = 4
good-names = ["T", "cm", "fg", "bg", "it", "i", "k", "n", "r", "s", "x", "y"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = false

[tool.ruff]
line-length = 100
target-version = "py310"
