[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.1.3"
addopts = """--import-mode=importlib \
             --doctest-modules \
             --doctest-glob='doctest*.rst'"""

[tool.mypy]
python_version = "3.10"
implicit_optional = false
# Methods of Collection[Any] may return Any
warn_return_any = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E", "W", # pycodestyle
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D419",   # empty-docstring
    "PLC",    # Pylint convention
    "PLE",    # Pylint error
    "PLW",    # Pylint warning
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
