[metadata]
name = galleries
version = attr: galleries.__version__
author = Dylan Maltby
description = Organize gallery tags in a CSV file

[options]
include_package_data = True
packages = galleries
python_requires = >=3.10
install_requires =
    pyparsing
    rich
    tomli >= 1.1.0 ; python_version < "3.11"

[options.extras_require]
TOML =

[options.entry_points]
console_scripts =
    galleries = galleries.cli:main
